--- a/adsdk/src/main/res/layout/had_card_full.xml
+++ b/adsdk/src/main/res/layout/had_card_full.xml
@@ -20,6 +20,8 @@
 
             <ImageView
                 android:id="@+id/native_image_cover"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
                 android:contentDescription="@null"
                 android:scaleType="fitXY"
                 app:layout_aspectRatio="192%"
@@ -27,6 +29,8 @@
 
             <RelativeLayout
                 android:id="@+id/native_media_cover"
+                android:layout_height="0dp"
+                android:layout_width="0dp"
                 android:contentDescription="@null"
                 android:visibility="gone"
                 app:layout_aspectRatio="192%"
@@ -34,8 +38,8 @@
 
             <RelativeLayout
                 android:id="@+id/native_ad_choices_container"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_width="0dp"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:padding="8dp" />
@@ -169,9 +173,8 @@
 
             <Button
                 android:id="@+id/native_cancel_btn"
-                style="@style/AdButtonFullStyle_Flat"
+                style="@style/AdButtonFullStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:layout_marginLeft="16dp"
@@ -185,7 +188,6 @@
                 android:id="@+id/native_action_btn"
                 style="@style/AdButtonFullStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:layout_marginBottom="16dp"
