--- a/adsdk/src/main/res/layout/had_card_large.xml
+++ b/adsdk/src/main/res/layout/had_card_large.xml
@@ -21,6 +21,8 @@
 
             <ImageView
                 android:id="@+id/native_image_cover"
+                android:layout_height="0dp"
+                android:layout_width="0dp"
                 android:contentDescription="@null"
                 android:scaleType="fitXY"
                 app:layout_aspectRatio="192%"
@@ -28,6 +30,8 @@
 
             <RelativeLayout
                 android:id="@+id/native_media_cover"
+                android:layout_height="0dp"
+                android:layout_width="0dp"
                 android:contentDescription="@null"
                 android:visibility="gone"
                 app:layout_aspectRatio="192%"
@@ -35,8 +39,8 @@
 
             <RelativeLayout
                 android:id="@+id/native_ad_choices_container"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_width="0dp"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:padding="8dp" />
@@ -151,14 +155,11 @@
             android:id="@+id/native_action_btn"
             style="@style/AdButtonLargeStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
             android:text="Learn More" />
     </LinearLayout>
 </FrameLayout>
