--- a/adsdk/src/main/res/layout/had_card_medium.xml
+++ b/adsdk/src/main/res/layout/had_card_medium.xml
@@ -20,6 +20,8 @@
 
             <ImageView
                 android:id="@+id/native_image_cover"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:contentDescription="@null"
                 android:scaleType="fitXY"
                 app:layout_aspectRatio="192%"
@@ -27,6 +29,8 @@
 
             <RelativeLayout
                 android:id="@+id/native_media_cover"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:contentDescription="@null"
                 android:visibility="gone"
                 app:layout_aspectRatio="192%"
@@ -34,10 +38,10 @@
 
             <RelativeLayout
                 android:id="@+id/native_ad_choices_container"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
                 android:padding="8dp" />
 
         </androidx.percentlayout.widget.PercentRelativeLayout>
@@ -46,10 +50,10 @@
             android:id="@+id/native_header_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="4dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -85,10 +89,10 @@
                         android:layout_marginRight="4dp"
                         android:background="@drawable/had_badge_bg"
                         android:gravity="center"
-                        android:paddingBottom="2dp"
                         android:paddingLeft="4dp"
-                        android:paddingRight="4dp"
                         android:paddingTop="2dp"
+                        android:paddingRight="4dp"
+                        android:paddingBottom="2dp"
                         android:text="AD"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="8sp" />
@@ -138,9 +142,9 @@
             android:id="@+id/native_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
             android:ellipsize="marquee"
             android:gravity="left|center_vertical"
             android:maxLines="3"
@@ -151,12 +155,12 @@
 
         <Button
             android:id="@+id/native_action_btn"
-            style="@style/AdButtonStyle"
+            style="@style/AdButtonMediumStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
             android:text="Learn More" />
     </LinearLayout>
 </FrameLayout>
