--- a/adsdk/src/main/res/layout/had_card_tiny.xml
+++ b/adsdk/src/main/res/layout/had_card_tiny.xml
@@ -109,16 +109,14 @@
 
                     <Button
                         android:id="@+id/native_action_btn"
-                        style="@style/AdButtonFullStyle_Flat"
+                        style="@style/AdButtonTinyStyle"
                         android:layout_width="wrap_content"
-                        android:layout_height="30dp"
                         android:layout_marginRight="30dp"
+                        android:layout_alignParentLeft="true"
                         android:background="@drawable/had_action_bg"
                         android:ellipsize="end"
                         android:gravity="center"
                         android:lines="1"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
                         android:text="Learn More"
                         android:textColor="@android:color/white"
                         android:textSize="14sp"
