--- a/adsdk/src/main/res/layout/had_card_medium.xml
+++ b/adsdk/src/main/res/layout/had_card_medium.xml
@@ -38,8 +38,8 @@
 
             <RelativeLayout
                 android:id="@+id/native_ad_choices_container"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:padding="8dp" />
