--- a/adsdk/src/main/res/values/had_styles.xml
+++ b/adsdk/src/main/res/values/had_styles.xml
@@ -16,6 +16,7 @@
         <item name="android:textSize">13sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:minWidth">84dp</item>
+        <item name="android:minHeight">40dp</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 
