--- a/adsdk/src/main/res/layout/had_card_large.xml
+++ b/adsdk/src/main/res/layout/had_card_large.xml
@@ -21,8 +21,8 @@
 
             <ImageView
                 android:id="@+id/native_image_cover"
-                android:layout_height="0dp"
                 android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:contentDescription="@null"
                 android:scaleType="fitXY"
                 app:layout_aspectRatio="192%"
@@ -30,8 +30,8 @@
 
             <RelativeLayout
                 android:id="@+id/native_media_cover"
-                android:layout_height="0dp"
                 android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:contentDescription="@null"
                 android:visibility="gone"
                 app:layout_aspectRatio="192%"
@@ -39,10 +39,10 @@
 
             <RelativeLayout
                 android:id="@+id/native_ad_choices_container"
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
                 android:padding="8dp" />
 
         </androidx.percentlayout.widget.PercentRelativeLayout>
@@ -51,19 +51,19 @@
             android:id="@+id/native_header_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="4dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/native_icon"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:visibility="gone"
                 android:layout_centerHorizontal="true"
-                android:contentDescription="@null" />
+                android:contentDescription="@null"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -86,10 +86,10 @@
                         android:layout_toRightOf="@+id/native_title"
                         android:background="@drawable/had_badge_bg"
                         android:gravity="center"
-                        android:paddingBottom="2dp"
                         android:paddingLeft="4dp"
-                        android:paddingRight="4dp"
                         android:paddingTop="2dp"
+                        android:paddingRight="4dp"
+                        android:paddingBottom="2dp"
                         android:text="AD"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="8sp" />
@@ -112,8 +112,8 @@
                     android:id="@+id/native_sub_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ellipsize="marquee"
                     android:layout_gravity="center_horizontal"
+                    android:ellipsize="marquee"
                     android:gravity="center"
                     android:singleLine="true"
                     android:textColor="@color/had_secondaryColor"
@@ -139,10 +139,10 @@
             android:id="@+id/native_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
             android:ellipsize="marquee"
             android:gravity="center"
             android:maxLines="3"
@@ -151,15 +151,17 @@
             android:textSize="15sp"
             android:visibility="gone" />
 
-        <Button
+        <TextView
             android:id="@+id/native_action_btn"
             style="@style/AdButtonLargeStyle"
             android:layout_width="match_parent"
+            android:layout_height="48dp"
             android:layout_gravity="center"
-            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:gravity="center"
             android:text="Learn More" />
     </LinearLayout>
 </FrameLayout>
