--- a/adsdk/src/main/res/layout/had_card_mix.xml
+++ b/adsdk/src/main/res/layout/had_card_mix.xml
@@ -179,7 +179,7 @@
                 android:layout_alignParentBottom="true"
                 android:orientation="horizontal">
 
-                <Button
+                <TextView
                     android:id="@+id/native_action_btn"
                     style="@style/AdButtonFullStyle_Flat"
                     android:layout_width="match_parent"
@@ -192,7 +192,7 @@
                     android:background="@drawable/had_action_bg"
                     android:text="Learn More" />
 
-                <Button
+                <TextView
                     android:id="@+id/native_cancel_btn"
                     style="@style/AdButtonFullStyle_Flat"
                     android:layout_width="match_parent"
