--- a/adsdk/src/main/res/layout/had_card_small.xml
+++ b/adsdk/src/main/res/layout/had_card_small.xml
@@ -143,7 +143,7 @@
                 </FrameLayout>
             </LinearLayout>
 
-            <Button
+            <TextView
                 android:id="@+id/native_action_btn"
                 style="@style/AdButtonSmallStyle"
                 android:layout_width="wrap_content"
