--- a/adsdk/src/main/res/layout/had_card_tiny.xml
+++ b/adsdk/src/main/res/layout/had_card_tiny.xml
@@ -107,7 +107,7 @@
                     android:layout_marginTop="6dp"
                     android:foregroundGravity="bottom">
 
-                    <Button
+                    <TextView
                         android:id="@+id/native_action_btn"
                         style="@style/AdButtonTinyStyle"
                         android:layout_width="wrap_content"
