--- a/adsdk/src/main/res/values/had_styles.xml
+++ b/adsdk/src/main/res/values/had_styles.xml
@@ -18,6 +18,8 @@
         <item name="android:minWidth">84dp</item>
         <item name="android:minHeight">40dp</item>
         <item name="android:textColor">@android:color/white</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
     <style name="AdButtonStyle" parent="AdButtonBaseStyle">
