--- a/app/src/main/res/values/ad_styles.xml
+++ b/app/src/main/res/values/ad_styles.xml
@@ -1,30 +1,22 @@
 <resources>
 
-    <style name="CardStyle">
-        <item name="cardCornerRadius">2dp</item>
-        <item name="cardElevation">1dp</item>
-        <item name="contentPadding">0dp</item>
-        <item name="cardPreventCornerOverlap">false</item>
-        <item name="cardUseCompatPadding">true</item>
-    </style>
-
-    <style name="AdButtonStyle">
+    <style name="RabButtonStyle">
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_height">36dp</item>
         <item name="android:textSize">13sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">@drawable/had_action_bg</item>
+        <item name="android:background">@drawable/rab_action_bg</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 
-    <style name="AdButtonLargeStyle">
+    <style name="RabButtonLargeStyle">
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_height">36dp</item>
         <item name="android:textSize">13sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">@drawable/had_action_bg</item>
+        <item name="android:background">@drawable/rab_action_bg</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 </resources>
