--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,2 +1,6 @@
 <resources>
+    <style name="SplashTheme" parent="android:Theme.Holo.Light.NoActionBar">
+<!--        <item name="android:windowFullscreen">true</item>-->
+        <item name="android:statusBarColor">@color/white</item>
+    </style>
 </resources>
