--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -141,15 +141,6 @@
                 android:text="round" />
         </LinearLayout>
 
-        <Button
-            android:id="@+id/show_complex"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_weight="1"
-            android:onClick="onClick"
-            android:text="全局Complex广告展示" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -200,43 +191,70 @@
                 android:text="NATIVE通用布局" />
         </LinearLayout>
 
-        <Button
-            android:id="@+id/spread_button"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:onClick="onClick"
-            android:text="展示Spread" />
+            android:layout_marginTop="6dp"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/show_ads_in_list"
+            <Button
+                android:id="@+id/show_complex"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_weight="1"
+                android:onClick="onClick"
+                android:text="展示Complex" />
+
+            <Button
+                android:id="@+id/spread_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_weight="1"
+                android:onClick="onClick"
+                android:text="展示Spread" />
+
+            <Button
+                android:id="@+id/show_ads_in_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_weight="1"
+                android:onClick="onClick"
+                android:text="列表广告" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:onClick="onClick"
-            android:text="列表展示广告" />
+            android:layout_marginTop="6dp"
+            android:orientation="horizontal">
 
-        <Switch
-            android:id="@+id/auto_reward"
-            style="@android:style/Widget.DeviceDefault.Button"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_gravity="center_horizontal"
-            android:checked="false"
-            android:gravity="center"
-            android:showText="true"
-            android:textOff="开启自动加载激励视频"
-            android:textOn="关闭自动加载激励视频"
-            android:thumb="@android:color/transparent"
-            android:track="@android:color/transparent" />
+            <CheckBox
+                android:id="@+id/auto_reward"
+                style="@android:style/Widget.DeviceDefault.Button"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:checked="false"
+                android:gravity="center"
+                android:showText="true"
+                android:text="自动加载激励视频"
+                android:thumb="@android:color/transparent"
+                android:track="@android:color/transparent" />
 
-        <Button
-            android:id="@+id/reward_video_queue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:onClick="onClick"
-            android:text="已加载激励视频数 : 0" />
+            <Button
+                android:id="@+id/reward_video_queue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:onClick="onClick"
+                android:text="加载成功数 : 0" />
+
+        </LinearLayout>
 
         <RelativeLayout
             android:id="@+id/native_banner_layout"
